--- a/LoRWatcher/Pages/Index.razor
+++ b/LoRWatcher/Pages/Index.razor
@@ -84,7 +84,7 @@
 
     private MatchReportMetadata matchReportMetadata;
 
-    private IEnumerable<ServiceMatchReport> matchReports;
+    private IEnumerable<MatchReport> matchReports;
 
     private Modal modalRef;
 
