Modified match report data to include count to fix filtering

--- a/LoRWatcher/Pages/Index.razor
+++ b/LoRWatcher/Pages/Index.razor
@@ -153,7 +153,8 @@
 
         var matchesTask = Task.Run(async () =>
         {
-            this.matchReports = await this.watcherService.GetMatchReportsAsync(0, RazorConstants.PageSize, cancellationToken: CancellationToken.None);
+            var matchReportsResult = await this.watcherService.GetMatchReportsAsync(0, RazorConstants.PageSize, cancellationToken: CancellationToken.None);
+            this.matchReports = matchReportsResult.Matches;
         });
 
         await Task.WhenAll(
