--- a/LoRWatcher/Pages/Components/MatchGrid.razor
+++ b/LoRWatcher/Pages/Components/MatchGrid.razor
@@ -110,7 +110,8 @@
 
     private async Task GetMatchReportsAsync()
     {
-        this.matchReports = await this.watcherService.GetMatchReportsAsync(this.skip, RazorConstants.PageSize, cancellationToken: CancellationToken.None);
+        var matchReportsResult = await this.watcherService.GetMatchReportsAsync(this.skip, RazorConstants.PageSize, cancellationToken: CancellationToken.None); ;
+        this.matchReports = matchReportsResult.Matches;
 
 #pragma warning disable CS4014
         InvokeAsync(() =>
@@ -122,8 +123,6 @@
 
     private async Task OnReadData(DataGridReadDataEventArgs<MatchReport> e)
     {
-        // TODO: Support filtering and sorting
-
         var opponentNameColumn = e.Columns.FirstOrDefault(column => column.Field == nameof(MatchReport.OpponentName));
         var opponentNameFilter = opponentNameColumn.SearchValue?.ToString();
         var opponentNameSortDirection = (int)opponentNameColumn.SortDirection;
@@ -143,7 +142,7 @@
         // TODO: Finish this search and update metadata graph based on this
 
         this.skip = RazorConstants.PageSize * (e.Page - 1);
-        this.matchReports = await this.watcherService.GetMatchReportsAsync(
+        var matchReportsResult = await this.watcherService.GetMatchReportsAsync(
             this.skip,
             RazorConstants.PageSize,
             opponentNameFilter,
@@ -156,7 +155,8 @@
             gameTypeSortDirection,
             CancellationToken.None);
 
-        StateHasChanged();
+        this.matchReports = matchReportsResult.Matches;
+        this.TotalGames = matchReportsResult.Count;
     }
 
     private bool RowSelected(MatchReport matchReport)
